# Titan-SDK

./: LICENSE  PLACEMENT_INSTRUCTIONS_TITAN_SDK_V1_8_0.txt  README.md  SHA256SUMS_TITAN_SDK_V1_8_0.txt  TITAN_SDK_CAPABILITY_REGISTRY_V1_6_0_2026_07_07.md  TITAN_SDK_RELIABILITY_FRAMEWORK_V1_6_1_2026_07_08.md  TITAN_SDK_UNIFIED_API_ROUTING_V1_5_2_2026_07_07.md  TITAN_SDK_UNIFIED_HEARTBEAT_FRAMEWORK_V1_5_1_2026_07_07.md  TITAN_SDK_V1_7_0_PROBATION_HANDOFF_2026_07_19.md  TITAN_SDK_V1_8_0_CONFIGURATION_MANAGEMENT_2026_07_19.md  pyproject.toml
Titan-SDK/: README.md  pyproject.toml
Titan-SDK/titan_sdk/: __init__.py  constants.py
examples/: simple_service.py
titan_sdk/: README_v1_3_0.md  __init__.py  api_routes.py  capabilities.py  client.py  command_framework.py  constants.py  diagnostics.py  health.py  heartbeat.py  logger.py  operations.py  pyproject.toml  reliability.py  retry.py  runtime.py  safe_io.py  telemetry.py  version.py
titan_sdk/configuration/: __init__.py  client.py  models.py  schema.py  sync.py  validation.py
