[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-sdk"
version = "1.1.0"
description = "Titan SDK for service registration, heartbeat, metrics, events, diagnostics, and runtime telemetry."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[tool.setuptools]
packages = ["titan_sdk"]
