[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-sdk"
version = "1.5.1"
description = "Titan SDK lifecycle, telemetry, diagnostics, metrics, operations, and runtime reporting framework."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["titan_sdk*"]
