[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-sdk"
version = "1.0.0"
description = "Titan SDK for service registration, heartbeat, status, metrics, and event reporting."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Titan Legends" }
]
dependencies = [
  "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/redhottdealz/Titan-SDK"
Repository = "https://github.com/redhottdealz/Titan-SDK"

[tool.setuptools.packages.find]
include = ["titan_sdk*"]
