[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-sdk"
version = "1.7.0"
description = "Titan SDK lifecycle, telemetry, diagnostics, metrics, operations, runtime reporting, API routing, and capability registry framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[tool.setuptools]
packages = ["titan_sdk"]
